# open_ai_playbook_for_noobs

./: .gitignore  README.md  embeddings.ipynb  pyproject.toml
playbooks/: embeddings.ipynb  generate_text_with_pattern.ipynb  summarize_long_text.ipynb
